# Cristal

./: .gitignore  .gitmodules  CMakeLists.txt  conanfile.py
.zed/: debug.json  settings.json  tasks.json
source/: Cristal.cpp  Render.cpp  ShaderProgram.cpp  Window.cpp  main.cpp  triangulo.cpp
source/headers/: Cristal.hpp  Render.hpp  ShaderProgram.hpp  Window.hpp
source/primitivos/: cuadrado.cpp  triangulo.cpp
